--- a/ECommerceSite/Views/_ViewImports.cshtml
+++ b/ECommerceSite/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ECommerceSite
-@using ECommerceSite.Models
+@using ECommereceSiteModels.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
