Crud of category is finished

--- a/ECommerceSite/Views/Category/Create.cshtml
+++ b/ECommerceSite/Views/Category/Create.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="mb-3 row">
                 <label asp-for="ImageUrl" class="ms-2">Image</label>
-                <input type="file" name="file" class="form-control border-0 shadow" />
+                <input type="file" name="img" class="form-control border-0 shadow" />
             </div>
             <div class="row">
                 <div class="col-6 col-md-3">
