--- a/ECommerceSite/Views/Product/Create.cshtml
+++ b/ECommerceSite/Views/Product/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 mt-4 col-8 m-auto">
     <div class="card-header bg-primary m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
