finished upto categories wise product render

--- a/ECommerceSite/Views/Product/Edit.cshtml
+++ b/ECommerceSite/Views/Product/Edit.cshtml
@@ -35,6 +35,11 @@
                 <input asp-for="discountRate" class="form-control border-0 shadow" />
                 <span asp-validation-for="discountRate" class="text-danger"></span>
             </div>
+                        <div class="mb-3 row">
+                            <label asp-for="quantity" class="ms-2">quantity</label>
+                            <input asp-for="quantity" class="form-control border-0 shadow" />
+                            <span asp-validation-for="quantity" class="text-danger"></span>
+                        </div>
             <div class="mb-3 row">
                 <label asp-for="ImageUrl" class="ms-2">Image Url</label>
                 <input type="file" name="img" class="form-control border-0 shadow" />
