--- a/ECommerceSite/Views/Home/Index.cshtml
+++ b/ECommerceSite/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
+    
     ViewData["Title"] = "Home Page";
     var categories = ViewBag.categories as List<ECommereceSiteModels.Models.Category>;
 }
+@model IEnumerable<Category>
 
 <section id="main_slider">
 <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -12,30 +14,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-                <img src="~/images/slider/006050c4-178d-491c-8e8f-03103775e294.jpg" alt="Alternate Text" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" />
-            @* <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#f5f5f5"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">First slide</text></svg> *@
-          @*   <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div> *@
+                <img src="~/images/slider/006050c4-178d-491c-8e8f-03103775e294.jpg" alt="Alternate Text" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" />        
         </div>
         <div class="carousel-item" data-bs-interval="2000">
                 <img src="~/images/slider/02e9dcc1-a619-4fd2-87d8-5bd7b3fdf950.jpg" alt="Alternate Text" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" />
-
-            @* <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#bbb" dy=".3em">Second slide</text></svg> *@
-           @*  <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-            </div> *@
         </div>
         <div class="carousel-item">
                 <img src="~/images/slider/dbfad525506fca03e512f974f9f7f631.png" alt="Alternate Text" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" />
-
-            @* <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#e5e5e5"></rect><text x="50%" y="50%" fill="#999" dy=".3em">Third slide</text></svg> *@
-           @*  <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div> *@
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -49,8 +34,8 @@
 </div>
 </section>
 
-<section class=" card pt-5 pb-5" id="feature_Product">
-    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+<section class=" card pt-3 pb-5" id="feature_Product">
+    <div id="carouselExampleControls" class="carousel carousel-dark slide " data-bs-ride="carousel">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -59,7 +44,7 @@
             </div>
             <div class="carousel-inner">
                 @{
-                    int itemsPerSlide = 6;
+                    int itemsPerSlide = 7;
                     int totalItems = categories.Count;
                     int slideCount = (totalItems + itemsPerSlide - 1) / itemsPerSlide;
                     for (int i = 0; i < slideCount; i++)
@@ -72,11 +57,13 @@
                                     int index = i * itemsPerSlide + j;
                                     if (index < totalItems)
                                     {
-                                        <div class="card " style="width: 12rem; ">
-                                            <img src="@categories[index].ImageUrl" class="card-img-top" alt="@categories[index].CategoryName">
-                                            <div class="card-body">
-                                                <h4 class="card-title">@categories[index].CategoryName</h4>
-                                            </div>
+                                        <div class="card " style="width: 10rem;">
+                                            <a asp-action="CategoryWiseProducts" asp-route-categoryId="@categories[index].Id" class="link text-dark text-decoration-none">
+                                            <img src="@categories[index].ImageUrl" class="card-img-top" alt="@categories[index].CategoryName" >
+                                            <div class="card-body p-1">
+                                                <h4 class="card-title text-center m-0">@categories[index].CategoryName</h4>
+                                                </div>
+                                            </a>
                                         </div>
                                     }
                                 }
@@ -85,52 +72,14 @@
                     }
                 }
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            @* <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+            </button> *@
         </div>
     </div>
 </section>
-@* <div id="productCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            @{
-                int itemsPerSlide = 4;
-                int totalItems = categories.Count();
-                int slideCount = (totalItems + itemsPerSlide - 1) / itemsPerSlide;
-                for (int i = 0; i < slideCount; i++)
-                {
-                    bool isActive = i == 0;
-           
-                <div class="carousel-item @(isActive ? "active" : "")">
-                    <div class="d-flex justify-content-center">
-                        @for (int j = 0; j < itemsPerSlide; j++)
-                        {
-                            int index = i * itemsPerSlide + j;
-                            if (index < totalItems)
-                            {
-                                <div class="col-3 product-card">
-                                    <img src="@categories[index].ImageUrl" alt="@categories[index].CategoryName" />
-                                    <h5>@categories[index].CategoryName</h5>
-                                    
-                                </div>
-                            }
-                        }
-                    </div>
-                </div>
-            }
-            }
-        </div>
-        <a class="carousel-control-prev" href="#productCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#productCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div> *@
