--- a/ECommerceSite/Views/Product/Create.cshtml
+++ b/ECommerceSite/Views/Product/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<div class="card shadow border-0 mt-4 col-8 m-auto">
+<div class="card shadow border-0 mt-4 col-4 m-auto">
     <div class="card-header bg-primary m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -12,31 +12,36 @@
         <form asp-action="Create" method="post" class="row" enctype="multipart/form-data">
             <div class="mb-3 row">
                 <label asp-for="ProductName" class="ms-2">Product Name</label>
-                <input asp-for="ProductName" class="form-control border-0 shadow" />
+                <input asp-for="ProductName" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="mb-3 row">
                 <label asp-for="Description" class="ms-2">Description</label>
-                <input asp-for="Description" class="form-control border-0 shadow" />
+                <textarea rows="4" cols="50" asp-for="Description" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " ></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="mb-3 row">
                 <label asp-for="Price" class="ms-2">Price</label>
-                <input asp-for="Price" class="form-control border-0 shadow" />
+                <input asp-for="Price" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="mb-3 row">
                 <label asp-for="discountRate" class="ms-2">Discounted Rate</label>
-                <input asp-for="discountRate" class="form-control border-0 shadow" />
+                <input asp-for="discountRate" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " />
                 <span asp-validation-for="discountRate" class="text-danger"></span>
             </div>
             <div class="mb-3 row">
+                <label asp-for="quantity" class="ms-2">Quantity</label>
+                <input asp-for="quantity" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " />
+                <span asp-validation-for="quantity" class="text-danger"></span>
+            </div>
+            <div class="mb-3 row">
                 <label asp-for="ImageUrl" class="ms-2">Image Url</label>
-                <input type="file" name="img" class="form-control border-0 shadow" />
+                <input type="file" name="img" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " />
             </div>
             <div class="mb-3 row">
                 <label asp-for="@Model.CategoryId" class="ms-2"></label>
-               <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select box-shadow">
+                <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-control  flex-1 border-1  border  rounded radius bg-transparent " >
                    <option disabled selected >--Select Category--</option>
                </select>
                <span asp-validation-for="CategoryId" class="text-danger"></span>
@@ -45,7 +50,7 @@
                 <div class="col-6 col-md-3">
                     <button type="submit" class="btn btn-outline-primary form-control">Create</button>
                 </div>
-                <div class="col-6 col-md-3">
+                <div class="col-6 col-md-5">
                     <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary form-control">Back To List</a>
                 </div>
             </div>
