--- a/ECommerceSite/wwwroot/css/site.css
+++ b/ECommerceSite/wwwroot/css/site.css
@@ -20,3 +20,18 @@ html {
 body {
   margin-bottom: 60px;
 }
+.text-truncate-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: calc(2 * 1.2em); /* 2 lines, 1.2em is the line height */
+    line-height: 1.2em; /* Adjust the line height if needed */
+}
+
+/*Card hover*/
+.card-hover:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+}
