--- a/ECommerceSite/Views/_ViewImports.cshtml
+++ b/ECommerceSite/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using ECommerceSite
 @using ECommereceSiteModels.Models
-
+@using ECommerceSiteUtiltiy
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
