Get Order Total in shopping Cart

--- a/ECommerceSite/Areas/Customers/Views/Home/ProductDetails.cshtml
+++ b/ECommerceSite/Areas/Customers/Views/Home/ProductDetails.cshtml
@@ -1,26 +1,27 @@
-﻿@model Product
+﻿@model ShoppingCart
 
 <form method="post">
     <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h3 class="text-white text-uppercase">@Model.ProductName</h3>                   
+                    <h3 class="text-white text-uppercase">@Model.Product.ProductName</h3>                   
                 </div>
             </div>
         </div>
         <div class="card-body">
             <div class="py-3">
+                <input hidden asp-for="ProductId"/>
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
-                        <a asp-action="CategoryWiseProducts" asp-route-categoryId="@Model.CategoryId" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                        <a asp-action="CategoryWiseProducts" asp-route-categoryId="@Model.Product.CategoryId" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
                             <small>Go To Previous</small>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        <img src="@Model.ImageUrl" width="90%" class="rounded" />
+                        <img src="@Model.Product.ImageUrl" width="90%" class="rounded" />
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
@@ -43,14 +44,14 @@
                                 <div>Price</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Price.ToString()</div>
+                                <div>@Model.Product.Price.ToString()</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.discountRate.ToString()</div>
+                                <div>@Model.Product.discountRate.ToString()</div>
                             </div>                          
                         </div>
                         <div class="row pl-2 my-3">
-                            <p class="text-secondary lh-sm">@Model.Description</p>
+                            <p class="text-secondary lh-sm">@Model.Product.Description</p>
                         </div>
                         <div class="row pl-2 mb-3">
                             <div class="col-md-4">
@@ -59,7 +60,7 @@
                                           id="inputGroup-sizing-default">
                                         Count
                                     </span>
-                                    <input type="number" value="1" class="form-control text-end"
+                                    <input asp-for="Count" type="number" value="1" class="form-control text-end"
                                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
 
                                 </div>
@@ -67,9 +68,9 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
-                                <button type="submit" disabled
+                                <button type="submit" 
                                         class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
-                                    Add to Cart (Comming Soon...)
+                                    Add to Cart
                                 </button>
                             </div>
                         </div>
