--- a/ECommerceSite/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ECommerceSite/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ECommerceSite
 @using ECommereceSiteModels.Models
 @using ECommerceSiteUtiltiy
+@using ECommereceSiteModels.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
