finished up to ordermanagement

--- a/ECommerceSite/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ECommerceSite/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using ECommerceSite
 @using ECommereceSiteModels.Models
 @using ECommerceSiteUtiltiy
-@using ECommereceSiteModels.ViewModels
-
+@using ECommerceSiteModels.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
